--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,10 @@ android {
             targetCompatibility JavaVersion.VERSION_1_7
         }
 
+        //Optionally configure your OneSignal IDs below
+        manifestPlaceholders = [manifestApplicationId          : "${applicationId}",
+                                onesignal_app_id               : "",
+                                onesignal_google_project_number: ""]
 
     }
     buildTypes {
@@ -36,6 +40,7 @@ repositories {
 
 dependencies {
     compile 'org.jsoup:jsoup:1.8.3'
+    compile 'com.onesignal:OneSignal:3.4.2@aar'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.booking:rtlviewpager:1.0.1'
     compile 'com.android.support:appcompat-v7:25.1.1'
